fixed bio spacing

--- a/main.css
+++ b/main.css
@@ -253,6 +253,9 @@ button {
     width: 100%;
     padding-left: 60px;
   }
+  .content {
+    padding-bottom: 60px;
+  }
 }
 section.bio {
   padding-left: 0;
